# third_party_pcre2

./: BUILD.gn  OAT.xml  README.OpenSource  bundle.json  copy_generic_files.sh
pcre2/: .gitignore  check_md5.sh
pcre2/src/: pcre2_jit_compile.c  pcre2_jit_test.c  pcre2_serialize.c  pcre2test.c
pcre2_ArkTS/: pcre2_newline_static.c
